add POST archive/unarchive for videos, shortlists
