# server/api/controllers/videos/router.js
@@ -7,4 +7,6 @@ export default express
   .get('/', auth, controller.all)
   .post('/', controller.insert)
   .get('/:id', controller.byParam)
-  .delete('/:id', auth, controller.delete);
+  .delete('/:id', auth, controller.delete)
+  .post('/archive', auth, controller.archive)
+  .post('/unarchive', auth, controller.unarchive);
